ordinator vancian magic spell charge tracking, potential crash fix

--- a/skse_plugin/CMakeLists.txt
+++ b/skse_plugin/CMakeLists.txt
@@ -101,7 +101,7 @@ if(DEFINED OUTPUT_FOLDER)
         VERBATIM
     )
 
-    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
         add_custom_command(
             TARGET "${PROJECT_NAME}"
             POST_BUILD
