--- a/skse_plugin/CMakeLists.txt
+++ b/skse_plugin/CMakeLists.txt
@@ -82,6 +82,8 @@ set(source_files src/plugin.cpp
                  src/rendering/bar_dragging_config_window.cpp
                  src/rendering/advanced_bind_menu.h
                  src/rendering/advanced_bind_menu.cpp
+                 src/rendering/gui_tab_button.h
+                 src/rendering/gui_tab_button.cpp
 )
 
 add_commonlibsse_plugin(${PROJECT_NAME} SOURCES ${source_files})
